; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_muxedit.c_SetAlphaAndImageChunks.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_muxedit.c_SetAlphaAndImageChunks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32 }
%struct.TYPE_12__ = type { i32* }
%struct.TYPE_11__ = type { i32, i32 }

@kChunks = common dso_local global %struct.TYPE_13__* null, align 8
@IDX_VP8L = common dso_local global i64 0, align 8
@IDX_VP8 = common dso_local global i64 0, align 8
@WEBP_MUX_OK = common dso_local global i64 0, align 8
@IDX_ALPHA = common dso_local global i64 0, align 8
@WEBP_MUX_INVALID_ARGUMENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_12__*, i32, %struct.TYPE_11__*)* @SetAlphaAndImageChunks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @SetAlphaAndImageChunks(%struct.TYPE_12__* %0, i32 %1, %struct.TYPE_11__* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_12__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_11__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_12__, align 8
  %10 = alloca %struct.TYPE_12__, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.TYPE_11__* %2, %struct.TYPE_11__** %7, align 8
  store i32 0, i32* %8, align 4
  %13 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %14 = call i64 @GetImageData(%struct.TYPE_12__* %13, %struct.TYPE_12__* %9, %struct.TYPE_12__* %10, i32* %8)
  store i64 %14, i64* %11, align 8
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %3
  %18 = load %struct.TYPE_13__*, %struct.TYPE_13__** @kChunks, align 8
  %19 = load i64, i64* @IDX_VP8L, align 8
  %20 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %18, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  br label %29

23:                                               ; preds = %3
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** @kChunks, align 8
  %25 = load i64, i64* @IDX_VP8, align 8
  %26 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %24, i64 %25
  %27 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  br label %29

29:                                               ; preds = %23, %17
  %30 = phi i32 [ %22, %17 ], [ %28, %23 ]
  store i32 %30, i32* %12, align 4
  %31 = load i64, i64* %11, align 8
  %32 = load i64, i64* @WEBP_MUX_OK, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %29
  %35 = load i64, i64* %11, align 8
  store i64 %35, i64* %4, align 8
  br label %77

36:                                               ; preds = %29
  %37 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %10, i32 0, i32 0
  %38 = load i32*, i32** %37, align 8
  %39 = icmp ne i32* %38, null
  br i1 %39, label %40, label %56

40:                                               ; preds = %36
  %41 = load i32, i32* %6, align 4
  %42 = load %struct.TYPE_13__*, %struct.TYPE_13__** @kChunks, align 8
  %43 = load i64, i64* @IDX_ALPHA, align 8
  %44 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %42, i64 %43
  %45 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %48 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %47, i32 0, i32 1
  %49 = call i64 @AddDataToChunkList(%struct.TYPE_12__* %10, i32 %41, i32 %46, i32* %48)
  store i64 %49, i64* %11, align 8
  %50 = load i64, i64* %11, align 8
  %51 = load i64, i64* @WEBP_MUX_OK, align 8
  %52 = icmp ne i64 %50, %51
  br i1 %52, label %53, label %55

53:                                               ; preds = %40
  %54 = load i64, i64* %11, align 8
  store i64 %54, i64* %4, align 8
  br label %77

55:                                               ; preds = %40
  br label %56

56:                                               ; preds = %55, %36
  %57 = load i32, i32* %6, align 4
  %58 = load i32, i32* %12, align 4
  %59 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %60 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %59, i32 0, i32 0
  %61 = call i64 @AddDataToChunkList(%struct.TYPE_12__* %9, i32 %57, i32 %58, i32* %60)
  store i64 %61, i64* %11, align 8
  %62 = load i64, i64* %11, align 8
  %63 = load i64, i64* @WEBP_MUX_OK, align 8
  %64 = icmp ne i64 %62, %63
  br i1 %64, label %65, label %67

65:                                               ; preds = %56
  %66 = load i64, i64* %11, align 8
  store i64 %66, i64* %4, align 8
  br label %77

67:                                               ; preds = %56
  %68 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %69 = call i64 @MuxImageFinalize(%struct.TYPE_11__* %68)
  %70 = icmp ne i64 %69, 0
  br i1 %70, label %71, label %73

71:                                               ; preds = %67
  %72 = load i64, i64* @WEBP_MUX_OK, align 8
  br label %75

73:                                               ; preds = %67
  %74 = load i64, i64* @WEBP_MUX_INVALID_ARGUMENT, align 8
  br label %75

75:                                               ; preds = %73, %71
  %76 = phi i64 [ %72, %71 ], [ %74, %73 ]
  store i64 %76, i64* %4, align 8
  br label %77

77:                                               ; preds = %75, %65, %53, %34
  %78 = load i64, i64* %4, align 8
  ret i64 %78
}

declare dso_local i64 @GetImageData(%struct.TYPE_12__*, %struct.TYPE_12__*, %struct.TYPE_12__*, i32*) #1

declare dso_local i64 @AddDataToChunkList(%struct.TYPE_12__*, i32, i32, i32*) #1

declare dso_local i64 @MuxImageFinalize(%struct.TYPE_11__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
